@@ -875,6 +875,10 @@ int Camera::setValue (rts2core::Value * old_value, rts2core::Value * new_value)
 		setDefaultPlate (xplate->getValueDouble (), new_value->getValueDouble ());
 		return 0;
 	}
+	if (old_value == coolingOnOff)
+	{
+		return switchCooling (((rts2core::ValueBool *) new_value)->getValueBool ());
+	}
 	return rts2core::ScriptDevice::setValue (old_value, new_value);
 }
 
