@@ -1,3 +1,6 @@
+2011-09-25
+ * switchCooling, coolingOnOff in camd
+
 2011-09-23
  * raiseHWError, clearHWError
 
